Updated item tags, moved RegistryQueue over from AR, updated transfer APIs.